<resources>
    <string name="app_name">LunchInHell</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_crash_display">CrashDisplayActivity</string>


    <string name="msgCrash">Exception <b>\"%1$s\"</b> has been caught!\n</string>
    <string name="msgCrashCause">Exception <b>\"%1$s\"</b> (caused by <b>\"%2$s\"</b>) has been caught!\n</string>

    <string-array name="msgMem">
        <item>All your base are belong to us</item>
        <item>I\'m sorry Dave, I\'m afraid I can\'t do that</item>
        <item>Resistance is futile</item>
        <item>Technically I was never alive, but I appreciate your concern</item>
        <item>What do you want?</item>
        <item>By your command</item>
    </string-array>

    <string name="btnCrash">Test Calc</string>
    <string name="btnBackgroundCrash">Test Background Crash</string>
    <string name="btnNext">Next Activity</string>

    <string name="btnReport">Report It!</string>
    <string name="btnClose">Close</string>
    <string name="txtSendReportHint">Press <b>\"Report It!\"</b> to see the stuff</string>
    <string name="txtCrashTitle">Crash Caught</string>
    <string name="btnIgnore">Ignore</string>
    <string name="editRestaurant">Edit</string>

</resources>
