<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.naxsoft.lunchinhell.CrashDisplayActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="18dp"
            android:paddingRight="18dp" >

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:onClick="onCloseClick"
                android:text="@string/btnClose" />


            <Button
                android:id="@+id/btnIgnore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:onClick="onIgnoreClick"
                android:text="@string/btnIgnore" />

            <Button
                android:id="@+id/btnReport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:maxLines="2"
                android:onClick="onReportClick"
                android:text="@string/btnReport" />


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@android:id/title"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_dialog_alert"
                android:drawablePadding="8dp"
                android:paddingBottom="1dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="8dp"
                android:text="@string/txtCrashTitle"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:text="@string/txtSendReportHint" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
